--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -41,7 +41,7 @@
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <StackPanel>
-                                <TextBlock Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}" />
+                                <TextBlock Text="{Binding Query}" />
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
@@ -164,6 +164,7 @@
                                    FontFamily="Sitka Small"/>
                     
                         <ComboBox Margin="0 0 0 10"
+                                  Background="WhiteSmoke"
                                   ItemsSource="{Binding Difficulties}" 
                                   SelectedItem="{Binding ActivePack.Difficulty}"/>
 
