--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -132,7 +132,7 @@
                             MouseOverBackground="DarkOrange"
                             PressedBackground="OrangeRed"
                             Icon="{ui:SymbolIcon Symbol=ArrowDownload20}" 
-                            Command="{Binding ShowDownloadQuestionsViewCommand}"/>
+                            Command=""/>
 
                     <Border Height="2" Background="LightGray" Margin="10 30 10 5" />
                     
