--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -16,7 +16,8 @@
         ResizeMode="NoResize" 
         Background="Transparent" 
         AllowsTransparency="True"
-        MouseDown="Window_MouseDown">
+        MouseDown="Window_MouseDown"
+        KeyDown="Window_KeyDown">
 
     <Border Background="WhiteSmoke"
             CornerRadius="25"
