--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -18,6 +18,14 @@
         AllowsTransparency="True"
         MouseDown="Window_MouseDown"
         KeyDown="Window_KeyDown">
+    <Window.InputBindings>
+        <KeyBinding Key="F4" Modifiers="Alt" Command="{Binding ExitApplicationCommand}"/>
+        <KeyBinding Key="Q" Modifiers="Ctrl" Command="{Binding ConfigurationViewModel.AddQuestionCommand}"/>
+        <KeyBinding Key="R" Modifiers="Ctrl" Command="{Binding ConfigurationViewModel.RemoveQuestionCommand}"/>
+        <KeyBinding Key="O" Modifiers="Ctrl" Command="{Binding ShowConfigurationViewCommand}"/>
+        <KeyBinding Key="P" Modifiers="Ctrl" Command="{Binding ShowPlayViewCommand}"/>
+        <KeyBinding Key="C" Modifiers="Ctrl" Command="{Binding ShowConfigurationViewCommand}"/>
+    </Window.InputBindings>
 
     <Border Background="WhiteSmoke"
             CornerRadius="25"
