--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -16,8 +16,7 @@
         ResizeMode="NoResize" 
         Background="Transparent" 
         AllowsTransparency="True"
-        MouseDown="Window_MouseDown"
-        KeyDown="Window_KeyDown">
+        MouseDown="Window_MouseDown">
     <Window.InputBindings>
         <KeyBinding Key="F4" Modifiers="Alt" Command="{Binding ExitApplicationCommand}"/>
         <KeyBinding Key="Q" Modifiers="Ctrl" Command="{Binding ConfigurationViewModel.AddQuestionCommand}"/>
@@ -206,8 +205,25 @@
                                 MouseOverBackground="DarkOrange"
                                 PressedBackground="OrangeRed"
                                 Icon="{ui:SymbolIcon Symbol=Box20}"
-                                Command="{Binding ShowConfigurationViewCommand}">
-                    </ui:Button>
+                                Command="{Binding ShowConfigurationViewCommand}"/>
+
+                    <ui:Button  ToolTip="Import Questions"
+                                ToolTipService.InitialShowDelay="100"
+                                ToolTipService.Placement="Right"
+                                ToolTipService.HorizontalOffset="26.5"
+                                ToolTipService.VerticalOffset="6"
+                                Margin="10"
+                                BorderThickness="0"
+                                Appearance="Transparent"
+                                FontSize="38"
+                                Height="55"
+                                Width="55"
+                                CornerRadius="5" 
+                                MouseOverBackground="DarkOrange"
+                                PressedBackground="OrangeRed"
+                                Icon="{ui:SymbolIcon Symbol=CloudArrowDown20}"
+                                Command="{Binding ShowImporterViewCommand}"/>
+
                 </StackPanel>
             </Grid>
 
