--- a/QuizWPF/View/ConfigurationView.xaml
+++ b/QuizWPF/View/ConfigurationView.xaml
@@ -3,11 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp"
+             mc:Ignorable="d" 
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:QuizWPF.View" xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" 
              d:DataContext="{d:DesignInstance Type=viewmodel:ConfigurationViewModel}"
-             mc:Ignorable="d" 
              d:DesignHeight="515" d:DesignWidth="835">
 
 
@@ -19,7 +19,7 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Margin="10 0 10 0">
-                <TextBlock Text="Configure Question:"
+                <TextBlock Text="Configure Questions:"
                        VerticalAlignment="Top"
                        HorizontalAlignment="Center"
                        Foreground="WhiteSmoke"
