--- a/QuizWPF/MainWindow.xaml
+++ b/QuizWPF/MainWindow.xaml
@@ -24,6 +24,7 @@
         <KeyBinding Key="O" Modifiers="Ctrl" Command="{Binding ShowConfigurationViewCommand}"/>
         <KeyBinding Key="P" Modifiers="Ctrl" Command="{Binding ShowPlayViewCommand}"/>
         <KeyBinding Key="C" Modifiers="Ctrl" Command="{Binding ShowConfigurationViewCommand}"/>
+        <KeyBinding Key="I" Modifiers="Ctrl" Command="{Binding ShowImporterViewCommand}"/>
     </Window.InputBindings>
 
     <Border Background="WhiteSmoke"
@@ -224,6 +225,7 @@
                                 Icon="{ui:SymbolIcon Symbol=CloudArrowDown20}"
                                 Command="{Binding ShowImporterViewCommand}"/>
 
+
                 </StackPanel>
             </Grid>
 
@@ -231,7 +233,11 @@
                 <Border CornerRadius="5 5 20 5" Background="#202937" Margin="10" BorderThickness="2" BorderBrush="LightGray">
                     <ContentControl x:Name="MainContent" Margin="10" Content="{Binding CurrentView}" />
                 </Border>
+                
+                <ui:SnackbarPresenter  x:Name="SnackbarPresenter"/>
+                
             </Grid>
+
         </Grid>
     </Border>
 </Window>
