--- a/QuizWPF/View/ImporterView.xaml
+++ b/QuizWPF/View/ImporterView.xaml
@@ -12,7 +12,7 @@
     
     <Grid Background="#202937">
         
-        <StackPanel Width="290" VerticalAlignment="Center">
+        <StackPanel Width="290" VerticalAlignment="Center" Margin="0 0 0 30">
             
                 <TextBlock Text="Open Trivia DB Importer" 
                                HorizontalAlignment="Center"
@@ -30,19 +30,19 @@
                                Margin="5" 
                                FontFamily="Sitka Small"/>
 
-            <ComboBox Margin="0 0 0 10"
-                              Background="WhiteSmoke"
-                              ItemsSource="{Binding TriviaCategories.trivia_categories}" 
-                              SelectedItem="{Binding SelectedTriviaCategory}"
-                              DisplayMemberPath="name"/>
+                <ComboBox Margin="0 0 0 10"
+                                    Background="WhiteSmoke"
+                                    ItemsSource="{Binding TriviaCategories.trivia_categories}" 
+                                    SelectedItem="{Binding SelectedTriviaCategory}"
+                                    DisplayMemberPath="name"/>
             
-            <TextBlock Text="Difficulty"
-                               VerticalAlignment="Top"
-                               HorizontalAlignment="Left"
-                               Foreground="WhiteSmoke"
-                               FontSize="14"
-                               Margin="5" 
-                               FontFamily="Sitka Small"/>
+                <TextBlock Text="Difficulty"
+                                    VerticalAlignment="Top"
+                                    HorizontalAlignment="Left"
+                                    Foreground="WhiteSmoke"
+                                    FontSize="14"
+                                    Margin="5" 
+                                    FontFamily="Sitka Small"/>
 
                 <ComboBox Margin="0 0 0 10"
                               Background="WhiteSmoke"
