--- a/QuizWPF/View/MenuView.xaml
+++ b/QuizWPF/View/MenuView.xaml
@@ -4,8 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-             xmlns:local="clr-namespace:QuizWPF.View"
-             xmlns:fa="http://schemas.awesome.incremented/wpf/xaml/fontawesome.sharp" xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
+             xmlns:viewmodel="clr-namespace:QuizWPF.ViewModel"
+             d:DataContext="{d:DesignInstance Type=viewmodel:MainWindowViewModel}"
              mc:Ignorable="d"
              d:DesignHeight="43" d:DesignWidth="835">
     <Grid>
@@ -13,7 +13,7 @@
             <MenuItem Header="_File">
                 <MenuItem Header="_New Question Pack"
                           Icon="{ui:SymbolIcon Symbol=Save20}"
-                          Command="{Binding AddPackCommand}"/>
+                          Command="{Binding AddPackCommand}" />
                 <MenuItem Header="Select Pack"
                           Icon="{ui:SymbolIcon Symbol=Box20}">
                     <MenuItem.ItemsSource>
@@ -21,57 +21,57 @@
                     </MenuItem.ItemsSource>
                     <MenuItem.ItemTemplate>
                         <DataTemplate>
-                            <MenuItem Header="{Binding Name}" 
-                              Command="{Binding DataContext.SetActivePackCommand, RelativeSource={RelativeSource AncestorType=Window}}"
-                              CommandParameter="{Binding}" />
+                            <MenuItem Header="{Binding Name}"
+                                      Command="{Binding DataContext.SetActivePackCommand, RelativeSource={RelativeSource AncestorType=Window}}"
+                                      CommandParameter="{Binding}" />
                         </DataTemplate>
                     </MenuItem.ItemTemplate>
                 </MenuItem>
                 <MenuItem Header="_Delete Question Pack"
                           Icon="{ui:SymbolIcon Symbol=Delete20}"
-                          Command="{Binding RemovePackCommand}"/>
-                
-                <Separator/>
-                
+                          Command="{Binding RemovePackCommand}" />
+
+                <Separator />
+
                 <MenuItem Header="_Import Questions"
                           Icon="{ui:SymbolIcon Symbol=ArrowDownload20}"
                           Command="{Binding ShowImporterViewCommand}"
-                          InputGestureText="Ctrl+I"/>
-                <Separator/>
+                          InputGestureText="Ctrl+I" />
+                <Separator />
                 <MenuItem Header="_Exit"
                           Icon="{ui:SymbolIcon Symbol=ArrowExit20}"
                           Command="{Binding ExitApplicationCommand}"
-                          InputGestureText="Alt+F4"/>
+                          InputGestureText="Alt+F4" />
             </MenuItem>
-            
+
             <MenuItem Header="_Edit">
                 <MenuItem Header="_Add Question"
                           Icon="{ui:SymbolIcon Symbol=Add20}"
                           Command="{Binding ConfigurationViewModel.AddQuestionCommand}"
-                          InputGestureText="Ctrl+Q"/>
+                          InputGestureText="Ctrl+Q" />
                 <MenuItem Header="_Remove Question"
                           Icon="{ui:SymbolIcon Symbol=Subtract20}"
                           Command="{Binding ConfigurationViewModel.RemoveQuestionCommand}"
-                          InputGestureText="Ctrl+R"/>
+                          InputGestureText="Ctrl+R" />
                 <MenuItem Header="_Pack Options"
                           Icon="{ui:SymbolIcon Symbol=Options20}"
                           InputGestureText="Ctrl+O"
-                          Command="{Binding ShowConfigurationViewCommand}"/>
+                          Command="{Binding ShowConfigurationViewCommand}" />
             </MenuItem>
 
             <MenuItem Header="_View">
                 <MenuItem Header="_Play"
                           Icon="{ui:SymbolIcon Symbol=Play20}"
                           Command="{Binding ShowPlayViewCommand}"
-                          InputGestureText="Ctrl+P"/>
+                          InputGestureText="Ctrl+P" />
                 <MenuItem Header="_Configuration"
                           Icon="{ui:SymbolIcon Symbol=Box20}"
                           Command="{Binding ShowConfigurationViewCommand}"
-                          InputGestureText="Ctrl+C"/>
+                          InputGestureText="Ctrl+C" />
                 <MenuItem Header="_Fullscreen"
                           Icon="{ui:SymbolIcon Symbol=FullScreenMaximize20}"
                           InputGestureText="F11"
-                          IsEnabled="False"/>
+                          IsEnabled="False" />
             </MenuItem>
         </Menu>
     </Grid>
